--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a href="#contact" class="btn">Contact Me</a>
             </div>
             <div class="hero-image">
-                <img src="images/image.jpg" alt="Profile Image">
+                <img src="images/image1.jpg" alt="Profile Image">
             </div>
         </div>
     </section>
