--- a/index.html
+++ b/index.html
@@ -12,15 +12,20 @@
     <header id="header">
         <div class="container">
             <h1 class="logo">My Portfolio</h1>
-            <nav>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
+            <div class="header-right">
+                <div class="theme-toggle" id="themeToggle">
+                    <i class="fas fa-moon"></i>
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#skills">Skills</a></li>
+                        <li><a href="#projects">Projects</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
 
@@ -294,37 +299,6 @@
             <p>&copy; 2025 My Portfolio. All Rights Reserved.</p>
         </div>
     </footer>
-
-    <!-- Theme Toggle Button -->
-    <div class="theme-toggle" id="themeToggle">
-        <i class="fas fa-moon"></i>
-    </div>
-
-    <!-- Theme Selection Panel -->
-    <div class="theme-panel" id="themePanel">
-        <div class="theme-panel-toggle" id="themePanelToggle">
-            <i class="fas fa-palette"></i>
-        </div>
-        <div class="theme-options">
-            <div>
-                <div class="theme-option-title">Dark Mode</div>
-                <div class="theme-switch">
-                    <input type="checkbox" id="darkModeToggle">
-                    <span class="theme-switch-label">Enable Dark Mode</span>
-                </div>
-            </div>
-            <div>
-                <div class="theme-option-title">Theme Color</div>
-                <div class="color-options">
-                    <div class="color-option active" data-color="blue"></div>
-                    <div class="color-option" data-color="green"></div>
-                    <div class="color-option" data-color="purple"></div>
-                    <div class="color-option" data-color="orange"></div>
-                    <div class="color-option" data-color="pink"></div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <script src="script.js"></script>
 </body>
