--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
             <h2 class="section-title">My Skills</h2>
             <div class="skills-container">
                 <div class="skill-item">
+                    <i class="fab fa-python"></i>
+                    <h3>Python</h3>
+                    <div class="progress-bar">
+                        <div class="progress" style="width: 85%"></div>
+                    </div>
+                </div>
+                <div class="skill-item">
                     <i class="fab fa-C"></i>
                     <h3>C++</h3>
                     <div class="progress-bar">
@@ -132,7 +139,7 @@
                 </div>
                 <div class="skill-item">
                     <i class="fas fa-database"></i>
-                    <h3>SQL</h3>
+                    <h3>MySQL</h3>
                     <div class="progress-bar">
                         <div class="progress" style="width: 80%"></div>
                     </div>
@@ -144,16 +151,10 @@
                         <div class="progress" style="width: 60%"></div>
                     </div>
                 </div>
-                <div class="skill-item">
-                    <i class="fab fa-python"></i>
-                    <h3>Python</h3>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 60%"></div>
-                    </div>
-                </div>
+                
                 <div class="skill-item">
                     <i class="fab fa-github"></i>
-                    <h3>Git&Github</h3>
+                    <h3>Git & Github</h3>
                     <div class="progress-bar">
                         <div class="progress" style="width: 90%"></div>
                     </div>
