--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <li><a href="#home">Home</a></li>
                         <li><a href="#about">About</a></li>
                         <li><a href="#skills">Skills</a></li>
-                        <li><a href="https://drive.google.com/file/d/1dyEYaxRUFSRZFUTrSB39yKLlKC-ILUwS/view?usp=drive_link" target="_blank">Resume</a></li>
+                        <li><a href="https://drive.google.com/file/d/1UzzUQuj9MHn7-sKrXxi68O2FEmNKl3Qp/view?usp=sharing" target="_blank">Resume</a></li>
                         <li><a href="#projects">Projects</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
