updated drive link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <p>Developer</p>
                 <div class="hero-buttons">
                     <a href="#contact" class="btn">Contact Me</a>
-                    <a href="https://drive.google.com/file/d/1dyEYaxRUFSRZFUTrSB39yKLlKC-ILUwS/view?usp=drive_link" target="_blank" class="btn btn-outline">
+                    <a href="https://drive.google.com/file/d/1UzzUQuj9MHn7-sKrXxi68O2FEmNKl3Qp/view?usp=sharing" target="_blank" class="btn btn-outline">
                         <i class="fas fa-file-pdf"></i> View Resume
                     </a>
                 </div>
